# curricmeta

./: .gitignore  README.md  pyproject.toml
src/curricmeta/: __init__.py  experiment.py
src/curricmeta/callbacks/: __init__.py  base.py  console_logger.py  noop.py
src/curricmeta/config/: config.yaml
src/curricmeta/config/callbacks/: console_logger.yaml  noop.yaml
src/curricmeta/config/curriculum/: base.yaml  sequential.yaml
src/curricmeta/config/experiment/: base.yaml  dummy_experiment.yaml  meta_curriculum.yaml
src/curricmeta/config/logging/: base.yaml
src/curricmeta/config/meta/inner_loop/: base.yaml  supervised_curriculum.yaml
src/curricmeta/config/meta/outer_loop/: base.yaml  es_supervised.yaml
src/curricmeta/config/model/: base.yaml  mlp_2d.yaml
src/curricmeta/config/optim/: base.yaml
src/curricmeta/config/task/: base.yaml  gaussian_2d.yaml
src/curricmeta/curriculum/: __init__.py  base.py  easy_to_hard_gaussian.py  random_permuted.py  sequential.py
src/curricmeta/experiments/: __init__.py  dummy_experiment.py  meta_curriculum.py
src/curricmeta/meta/: __init__.py  es_outer_loop.py  inner_loop_base.py  outer_loop_base.py  supervised_curriculum_inner.py
src/curricmeta/models/: __init__.py  base.py  mlp_2d.py
src/curricmeta/optim/: __init__.py
src/curricmeta/scripts/: train.py
src/curricmeta/tasks/: __init__.py  base.py  gaussian_2d.py
src/curricmeta/utils/: __init__.py  discovery.py  logging.py  registry.py  seed.py
tests/: test_imports.py
