[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curricmeta"
version = "0.0.1"
description = "Meta-learning for curriculum learning - experiment framework"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "numpy>=1.23.0",
    "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"curricmeta" = ["config/**/*.yaml"]

[project.scripts]
curricmeta-train = "curricmeta.scripts.train:main"
curricmeta-eval  = "curricmeta.scripts.eval:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
